--- a/src/communication/membership.properties
+++ b/src/communication/membership.properties
@@ -1,28 +1,28 @@
 # membership.properties
 node.count=4
 
-node.1.id=node1
-node.1.address=127.0.0.1
-node.1.port=8001
-node.1.role=leader
-node.1.publicKeyPath=keys/node1_pub.key
+1.id=1
+1.address=127.0.0.1
+1.port=8001
+1.role=leader
+1.publicKeyPath=keys/node1_pub.key
 
-node.2.id=node2
-node.2.address=127.0.0.1
-node.2.port=8002
-node.2.role=member
-node.2.publicKeyPath=keys/node2_pub.key
+2.id=2
+2.address=127.0.0.1
+2.port=8002
+2.role=member
+2.publicKeyPath=keys/node2_pub.key
 
-node.3.id=node3
-node.3.address=127.0.0.1
-node.3.port=8003
-node.3.role=member
-node.3.publicKeyPath=keys/node3_pub.key
+3.id=3
+3.address=127.0.0.1
+3.port=8003
+3.role=member
+3.publicKeyPath=keys/node3_pub.key
 
-node.4.id=node4
-node.4.address=127.0.0.1
-node.4.port=8004
-node.4.role=member
-node.4.publicKeyPath=keys/node4_pub.key
+4.id=4
+4.address=127.0.0.1
+4.port=8004
+4.role=member
+4.publicKeyPath=keys/node4_pub.key
 
 # Add more nodes as needed
