--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Main",
+      "request": "launch",
+      "mainClass": "Main",
+      "projectName": "HighlyDependableSystems_d407951b"
+    },
+    {
+      "type": "java",
+      "name": "ISTCoinTest",
+      "request": "launch",
+      "mainClass": "ISTCoinTest",
+      "projectName": "HighlyDependableSystems_d407951b"
+    },
+    {
+      "type": "java",
       "name": "ConsensusNode",
       "request": "launch",
       "mainClass": "consensus.ConsensusNode",
