--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
-# Ignore target folder and vscode extensions
-./target
-# .vscode/
+# === Maven ===
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+.mvn/timing.properties
+log/
+
+# === Eclipse ===
+.project
+.classpath
+.settings/
+.metadata/
+
+# === VS Code ===
+.vscode/
+
+# === OS Specific ===
+.DS_Store
+Thumbs.db
+
+# === IntelliJ IDEA (just in case) ===
+*.iml
+.idea/
+
+# === Logs and temp files ===
+*.log
+*.tmp
+*.bak
+
+# === Java ===
+*.class
