--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <systemPath>${local.jars.dir}/core-24.12.2.jar</systemPath>
         </dependency>
         <dependency>
+    		<groupId>org.json</groupId>
+    		<artifactId>json</artifactId>
+    		<version>20230227</version>
+		</dependency>
+        <dependency>
             <groupId>org.hyperledger.besu</groupId>
             <artifactId>besu-datatypes</artifactId>
             <version>${hyperledger.besu.version}</version>
