--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <hyperledger.besu.version>24.12.2</hyperledger.besu.version>
         <tuweni.version>2.3.1</tuweni.version>
-		<local.jars.dir>/home/ubunto/Desktop/sec/project/HighlyDependableSystems/src/jars</local.jars.dir>	
         <!-- 
-        <local.jars.dir>C:/Users/Tomás Alves/Documents/GitHub/HighlyDependableSystems/src/jars</local.jars.dir>
+		<local.jars.dir>/home/ubunto/Desktop/sec/project/HighlyDependableSystems/src/jars</local.jars.dir>	
 		-->
+        <local.jars.dir>C:/Users/Tomás Alves/Documents/GitHub/HighlyDependableSystems/src/jars</local.jars.dir>
     </properties>
 
     <dependencies>
@@ -147,6 +147,13 @@
             <scope>system</scope>
             <systemPath>${local.jars.dir}/jna-5.16.0.jar</systemPath>
         </dependency>
+        
+        <!-- JSON -->
+        <dependency>
+  			<groupId>com.google.code.gson</groupId>
+  			<artifactId>gson</artifactId>
+  			<version>2.8.9</version> <!-- or latest -->
+		</dependency>
 
         <!-- Logging -->
         <dependency>
